# nox-build

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  LICENSE.md  README.md  nox.ini  noxfile.py  pyproject.toml  pytest.ini  setup.cfg
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
