[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.3"
black = "^20.8b1"
flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^0.790"
bandit = "^1.6.2"
toml = "^0.10.2"
pytest-bdd = "^4.0.1"
pyhamcrest = "^2.0.2"
nox = "^2020.8.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
