[metadata]
name = aggregator
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License

[flake8]
max-line-length = 120
max-complexity = 10
exclude = .venv,.tox,dist,doc,build,*.egg,.tox.env
